deploy: 7c8fed6deac6750d372f331fbded5e48bf8b966a

--- a/search/index.html
+++ b/search/index.html
@@ -12,7 +12,7 @@
 <meta property="og:description" content="Everything you (didn’t) want to know about image matching" />
 <meta property="og:site_name" content="Wide baseline stereo meets deep learning" />
 <script type="application/ld+json">
-{"description":"Everything you (didn’t) want to know about image matching","@type":"WebPage","headline":"Search","url":"/wide-baseline-stereo-blog/search/","@context":"https://schema.org"}</script>
+{"description":"Everything you (didn’t) want to know about image matching","@type":"WebPage","url":"/wide-baseline-stereo-blog/search/","headline":"Search","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/wide-baseline-stereo-blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="/wide-baseline-stereo-blog/feed.xml" title="Wide baseline stereo meets deep learning" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -29,7 +29,7 @@
 <meta property="og:description" content="Everything you (didn’t) want to know about image matching" />
 <meta property="og:site_name" content="Wide baseline stereo meets deep learning" />
 <script type="application/ld+json">
-{"description":"Everything you (didn’t) want to know about image matching","@type":"WebPage","headline":"Search","url":"/wide-baseline-stereo-blog/search/","@context":"https://schema.org"}</script>
+{"description":"Everything you (didn’t) want to know about image matching","@type":"WebPage","url":"/wide-baseline-stereo-blog/search/","headline":"Search","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
