--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@
 <meta property="og:description" content="Everything you (didn’t) want to know about image matching" />
 <meta property="og:site_name" content="Wide baseline stereo meets deep learning" />
 <script type="application/ld+json">
-{"description":"Everything you (didn’t) want to know about image matching","@type":"WebSite","url":"/wide-baseline-stereo-blog/about/","name":"Wide baseline stereo meets deep learning","headline":"About Me","@context":"https://schema.org"}</script>
+{"headline":"About Me","description":"Everything you (didn’t) want to know about image matching","@type":"WebSite","url":"/wide-baseline-stereo-blog/about/","name":"Wide baseline stereo meets deep learning","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/wide-baseline-stereo-blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="/wide-baseline-stereo-blog/feed.xml" title="Wide baseline stereo meets deep learning" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -29,7 +29,7 @@
 <meta property="og:description" content="Everything you (didn’t) want to know about image matching" />
 <meta property="og:site_name" content="Wide baseline stereo meets deep learning" />
 <script type="application/ld+json">
-{"description":"Everything you (didn’t) want to know about image matching","@type":"WebSite","url":"/wide-baseline-stereo-blog/about/","name":"Wide baseline stereo meets deep learning","headline":"About Me","@context":"https://schema.org"}</script>
+{"headline":"About Me","description":"Everything you (didn’t) want to know about image matching","@type":"WebSite","url":"/wide-baseline-stereo-blog/about/","name":"Wide baseline stereo meets deep learning","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
@@ -115,7 +115,7 @@ window.onload = wrap_img;
 My personal website is <a href="http://dmytro.ai">here</a>. 
 The best way to contact me is <a href="mailto: ducha.aiki@gmail.com">email</a> and <a href="https://twitter.com/ducha_aiki">Twitter</a>.</p>
 
-<p><sub><sup>This website is powered by <strong><a href="https://github.com/fastai/fastpages">fastpages</a></strong> <sup id="fnref:1" role="doc-noteref"><a href="#fn:1" class="footnote">1</a></sup>.</sup></sub></p>
+<p><sub><sup>This website is powered by <strong><a href="https://github.com/fastai/fastpages">fastpages</a></strong> <sup id="fnref:1" role="doc-noteref"><a href="#fn:1" class="footnote" rel="footnote">1</a></sup>.</sup></sub></p>
 
 <div class="footnotes" role="doc-endnotes">
   <ol>
