deploy: e1323871cf5274732a7a7bb692cd645775e49ec6

--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
 <meta property="og:description" content="Everything you (didn’t) want to know about image matching" />
 <meta property="og:site_name" content="Wide baseline stereo meets deep learning" />
 <script type="application/ld+json">
-{"headline":"Wide baseline stereo meets deep learning","description":"Everything you (didn’t) want to know about image matching","@type":"WebPage","url":"/wide-baseline-stereo-blog/404.html","@context":"https://schema.org"}</script>
+{"description":"Everything you (didn’t) want to know about image matching","@type":"WebPage","url":"/wide-baseline-stereo-blog/404.html","headline":"Wide baseline stereo meets deep learning","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/wide-baseline-stereo-blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="/wide-baseline-stereo-blog/feed.xml" title="Wide baseline stereo meets deep learning" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
@@ -29,7 +29,7 @@
 <meta property="og:description" content="Everything you (didn’t) want to know about image matching" />
 <meta property="og:site_name" content="Wide baseline stereo meets deep learning" />
 <script type="application/ld+json">
-{"headline":"Wide baseline stereo meets deep learning","description":"Everything you (didn’t) want to know about image matching","@type":"WebPage","url":"/wide-baseline-stereo-blog/404.html","@context":"https://schema.org"}</script>
+{"description":"Everything you (didn’t) want to know about image matching","@type":"WebPage","url":"/wide-baseline-stereo-blog/404.html","headline":"Wide baseline stereo meets deep learning","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
@@ -145,7 +145,7 @@ window.onload = wrap_img;
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/ducha-aiki" title="ducha-aiki"><svg class="svg-icon grey"><use xlink:href="/wide-baseline-stereo-blog/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/ducha_aiki" title="ducha_aiki"><svg class="svg-icon grey"><use xlink:href="/wide-baseline-stereo-blog/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/ducha-aiki" target="_blank" title="ducha-aiki"><svg class="svg-icon grey"><use xlink:href="/wide-baseline-stereo-blog/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/ducha_aiki" target="_blank" title="ducha_aiki"><svg class="svg-icon grey"><use xlink:href="/wide-baseline-stereo-blog/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
 </div>
 
   </div>
