deploy: be5af008628607cbb1951a692c5c94dc483eb6cd

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta property="og:site_name" content="Wide baseline stereo meets deep learning" />
 <link rel="next" href="/wide-baseline-stereo-blog/page2/" />
 <script type="application/ld+json">
-{"headline":"Wide baseline stereo meets deep learning","url":"/wide-baseline-stereo-blog/","@type":"WebSite","name":"Wide baseline stereo meets deep learning","description":"Everything you (didn’t) want to know about image matching","@context":"https://schema.org"}</script>
+{"url":"/wide-baseline-stereo-blog/","headline":"Wide baseline stereo meets deep learning","@type":"WebSite","name":"Wide baseline stereo meets deep learning","description":"Everything you (didn’t) want to know about image matching","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/wide-baseline-stereo-blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="/wide-baseline-stereo-blog/feed.xml" title="Wide baseline stereo meets deep learning" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
