--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@
 <meta property="og:description" content="Everything you (didn’t) want to know about image matching" />
 <meta property="og:site_name" content="Wide baseline stereo meets deep learning" />
 <script type="application/ld+json">
-{"headline":"About Me","url":"/wide-baseline-stereo-blog/about/","@type":"WebSite","name":"Wide baseline stereo meets deep learning","description":"Everything you (didn’t) want to know about image matching","@context":"https://schema.org"}</script>
+{"url":"/wide-baseline-stereo-blog/about/","headline":"About Me","@type":"WebSite","name":"Wide baseline stereo meets deep learning","description":"Everything you (didn’t) want to know about image matching","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/wide-baseline-stereo-blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="/wide-baseline-stereo-blog/feed.xml" title="Wide baseline stereo meets deep learning" /><!-- the google_analytics_id gets auto inserted from the config file -->
 
