--- a/about/index.html
+++ b/about/index.html
@@ -141,7 +141,21 @@ The best way to contact me is <a href="mailto: ducha.aiki@gmail.com">email</a> a
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/ducha-aiki" target="_blank" title="ducha-aiki"><svg class="svg-icon grey"><use xlink:href="/wide-baseline-stereo-blog/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://twitter.com/ducha_aiki" target="_blank" title="ducha_aiki"><svg class="svg-icon grey"><use xlink:href="/wide-baseline-stereo-blog/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li>
+  <a rel="me" href="https://github.com/ducha-aiki/" target="_blank" title="github">
+    <svg class="svg-icon grey">
+      <use xlink:href="/wide-baseline-stereo-blog/assets/minima-social-icons.svg#github"></use>
+    </svg>
+  </a>
+</li>
+<li>
+  <a rel="me" href="https://twitter.com/ducha_aiki" target="_blank" title="twitter">
+    <svg class="svg-icon grey">
+      <use xlink:href="/wide-baseline-stereo-blog/assets/minima-social-icons.svg#twitter"></use>
+    </svg>
+  </a>
+</li>
+</ul>
 </div>
 
   </div>
